...
                                Color.fromRGBO(143, 148, 251, .6),
                              ],
                            ),
                          ),
                          child: const Center(
                            child: Text(
                              "Create Your Own Event/List",
                              style: TextStyle(
                                color: Colors.white,
                                fontWeight: FontWeight.bold,
                              ),
                            ),
                          ),
...
                  FadeInUp(
                    duration: const Duration(milliseconds: 1900),
                    child: Row(
                      children: [
                        Expanded(
                          child: TextField(
                            key: const Key('add_friend_phone'),
                            controller: homeController.phoneController,
                            decoration: InputDecoration(
                              hintText: "Enter Phone Number",
                              prefixIcon: const Icon(Icons.phone, color: Color.fromRGBO(143, 148, 251, 1)),
                              border: OutlineInputBorder(
                                borderRadius: BorderRadius.circular(10),
...
